feat: Complete the bind device logic of ai integration

--- a/apps/web/src/pages/integration/views/integration-detail/components/ai-content/device-bind/components/bind-modal/style.less
+++ b/apps/web/src/pages/integration/views/integration-detail/components/ai-content/device-bind/components/bind-modal/style.less
@@ -112,6 +112,11 @@
                 justify-content: center;
                 height: 424px;
                 border-bottom: 1px solid var(--border-color-base);
+
+                > img {
+                    max-width: calc(100% - 40px);
+                    max-height: calc(100% - 40px);
+                }
             }
         }
 
@@ -133,9 +138,17 @@
             }
 
             &-body {
+                position: relative;
                 flex: 1;
                 padding: 0 @padding-md @padding-md;
                 overflow: auto;
+
+                .@{prefix}-empty {
+                    position: absolute;
+                    top: 50%;
+                    left: 50%;
+                    transform: translate(-50%, -50%);
+                }
             }
         }
     }
