--- a/apps/web/src/pages/integration/views/integration-detail/components/ai-content/device-bind/components/device-select/style.less
+++ b/apps/web/src/pages/integration/views/integration-detail/components/ai-content/device-bind/components/device-select/style.less
@@ -17,6 +17,17 @@
         display: flex;
         height: 240px;
 
+        &.empty {
+            align-items: center;
+            justify-content: center;
+            height: 92px;
+
+            .inte-list,
+            .device-list {
+                display: none;
+            }
+        }
+
         .inte-list {
             width: 50%;
             height: 100%;
