feat: Real tiem rendering of inference result when bind device

--- a/apps/web/src/pages/integration/views/integration-detail/components/ai-content/service/test-modal/style.less
+++ b/apps/web/src/pages/integration/views/integration-detail/components/ai-content/service/test-modal/style.less
@@ -82,14 +82,11 @@
                     &-action {
                         display: flex;
                         flex: 1;
+                        gap: @margin-md;
                         justify-content: flex-end;
 
                         .@{mui-prefix}ButtonBase-root {
                             padding: 0;
-
-                            &:not(&:last-child) {
-                                margin-right: @margin-md;
-                            }
                         }
                     }
                 }
