--- a/apps/web/src/components/toggle-radio/style.less
+++ b/apps/web/src/components/toggle-radio/style.less
@@ -1,9 +1,11 @@
 .@{prefix}-toggle-button-group {
-    &.@{mui-prefix}ToggleButtonGroup-root {
-        .@{mui-prefix}ToggleButtonGroup-grouped {
-            padding-top: 2px;
-            padding-bottom: 2px;
-            .text-size(@font-size-sm) !important;
+    &-small {
+        &.@{mui-prefix}ToggleButtonGroup-root {
+            .@{mui-prefix}ToggleButtonGroup-grouped {
+                padding-top: 2px;
+                padding-bottom: 2px;
+                .text-size(@font-size-sm) !important;
+            }
         }
     }
 }
