feat: Add table column setting feature

--- a/apps/web/src/components/table-pro/style.less
+++ b/apps/web/src/components/table-pro/style.less
@@ -107,7 +107,7 @@
         .@{prefix}-table-cell-fix-left,
         .@{prefix}-table-header-fix-left {
             z-index: 6;
-            border-right: 1px solid var(--border-color-base);
+            // border-right: 1px solid var(--border-color-base);
             .sticky-class();
 
             .@{mui-prefix}DataGrid-columnSeparator--sideRight {
@@ -118,7 +118,7 @@
         .@{prefix}-table-cell-fix-right,
         .@{prefix}-table-header-fix-right {
             z-index: 6;
-            border-left: 1px solid var(--border-color-base);
+            // border-left: 1px solid var(--border-color-base);
             .sticky-class();
     
             .@{mui-prefix}DataGrid-columnSeparator--sideRight {
@@ -128,10 +128,10 @@
 
         // gridCell shadow style
         .@{prefix}-table-cell-fix-right-first {
-            box-shadow: -2px 0 2px rgba(0, 0, 0, 0.06);
+            box-shadow: -4px 0 4px rgba(0, 0, 0, 0.06);
         }
         .@{prefix}-table-cell-fix-left-last {
-            box-shadow: 2px 0 2px rgba(0, 0, 0, 0.06);
+            box-shadow: 4px 0 4px rgba(0, 0, 0, 0.06);
         }
 
         // muti checkbox style
