fix: Add device template name exist i18n key

--- a/apps/web/src/pages/integration/views/integration-detail/components/mqtt-content/style.less
+++ b/apps/web/src/pages/integration/views/integration-detail/components/mqtt-content/style.less
@@ -35,7 +35,7 @@
 .@{prefix}-view-mqtt-template-add {
     &-content {
         position: relative;
-        height: 610px;
+        height: 640px;
 
         .@{mui-prefix}FormControl-root:nth-of-type(2) {
             .@{mui-prefix}InputAdornment-root  {
@@ -50,5 +50,6 @@
     }
     .@{prefix}-modal-content {
         padding-top: 0;
+        padding-bottom: 0;
     }
 }
