--- a/apps/web/src/pages/integration/views/integration-detail/components/mqtt-content/template/components/code-editor/style.less
+++ b/apps/web/src/pages/integration/views/integration-detail/components/mqtt-content/template/components/code-editor/style.less
@@ -12,12 +12,12 @@
         left: 0;
         z-index: 6;
         width: 100%;
-        height: calc(100% - 10px)!important;
+        height: calc(100% - 40px)!important;
     }
 
     &-full .@{prefix}-code-editor-wrap-footer {
         position: absolute;
-        top: calc(100% - 10px)!important;
+        bottom: 10px;
         left: 0;
         z-index: 6;
         width: 100%;
