feat: feat: device group ui design phase 3

--- a/apps/web/src/pages/device/components/device-group/components/header/style.module.less
+++ b/apps/web/src/pages/device/components/device-group/components/header/style.module.less
@@ -4,7 +4,7 @@
     align-items: center;
     justify-content: space-between;
     padding-top: @padding-xxs;
-    margin-bottom: @margin-lg;
+    margin: 0 @margin-lg @margin-lg 0;
 
     .left {
         font-weight: @font-weight-medium;
