fix:  Add some input limit char and length

--- a/apps/web/src/pages/integration/views/integration-detail/components/mqtt-content/style.less
+++ b/apps/web/src/pages/integration/views/integration-detail/components/mqtt-content/style.less
@@ -47,6 +47,10 @@
                 }
             }
         }
+
+        .@{mui-prefix}FormControl-root:last-child {
+            margin-bottom: @margin-md!important;
+        }
     }
     .@{prefix}-modal-content {
         padding-top: 0;
