--- a/apps/web/src/pages/device/components/device-group/components/body/style.module.less
+++ b/apps/web/src/pages/device/components/device-group/components/body/style.module.less
@@ -11,7 +11,7 @@
         align-items: center;
         justify-content: space-between;
         padding: @padding-xxs @padding-sm;
-        margin-bottom: @margin-xxs;
+        margin: 0 @margin-xs @margin-xxs 0;
         border-radius: @border-radius-base;
         cursor: pointer;
         transition: background-color 0.1s ease;
