fix: Update the color of form item helper text

--- a/apps/web/src/styles/mui-polyfill.less
+++ b/apps/web/src/styles/mui-polyfill.less
@@ -285,6 +285,7 @@ label.@{mui-prefix}FormControlLabel-root {
             display: flex;
             align-items: center;
             margin-left: @margin-xxs;
+            color: var(--icon-color-gray-tertiary);
         }
     }
 
@@ -347,6 +348,7 @@ label.@{mui-prefix}FormControlLabel-root {
             display: flex;
             align-items: center;
             margin-left: @margin-xxs;
+            color: var(--icon-color-gray-tertiary);
         }
 
         &:has(.@{mui-prefix}FormLabel-asterisk) {
