feat: device batch add ui design phase 2

--- a/apps/web/src/styles/index.less
+++ b/apps/web/src/styles/index.less
@@ -6,10 +6,10 @@ html {
     font-family: @font-family;
 }
 
-body {
-    background-color: var(--body-background);
-    .text-size(@font-size-base);
-}
+// body {
+//     background-color: var(--body-background);
+//     .text-size(@font-size-base);
+// }
 
 // ---------- Utilities ----------
 @enable-mobile-first: false;
