feat:  Add the definition of the advanced filter value component type

--- a/apps/web/src/pages/device/style.less
+++ b/apps/web/src/pages/device/style.less
@@ -8,3 +8,11 @@
         padding: @padding-lg;
     }
 }
+
+.@{prefix}-device-entity-data {
+    .@{prefix}-descriptions-root {
+        table {
+            table-layout: fixed;
+        }
+    }
+}
