fix:  adjust the display name of the filtering column

--- a/apps/web/src/components/table-pro/components/advanced-filter/style.less
+++ b/apps/web/src/components/table-pro/components/advanced-filter/style.less
@@ -31,7 +31,7 @@
             display: flex;
             justify-content: space-between;
             padding: 0 @padding-lg 0 @padding-xl;
-            margin-bottom: @margin-xs;
+            margin-bottom: @margin-sm;
 
             span {
                 font-size: @font-size-4;
