--- a/apps/web/src/components/table-pro/components/columns-setting/style.less
+++ b/apps/web/src/components/table-pro/components/columns-setting/style.less
@@ -94,7 +94,7 @@
         align-items: center;
         margin-left: @margin-sm;
 
-        &-icon {
+        .@{mui-prefix}IconButton-root {
             border: 1px solid var(--border-color-base)!important;
             border-radius: @border-radius-sm!important;
             .@{mui-prefix}SvgIcon-root {
