fix: give priority to using semantic style objects

--- a/apps/web/src/components/table-pro/components/advanced-filter/style.less
+++ b/apps/web/src/components/table-pro/components/advanced-filter/style.less
@@ -55,7 +55,7 @@
                     padding-top: @margin-xxs;
                     .@{mui-prefix}IconButton-root {
                         padding-left: 0;
-                        color: var(--gray-5);
+                        color: var(--gray-color-5);
                     }
                 }
     
