--- a/apps/web/src/components/table-pro/components/columns-setting/style.less
+++ b/apps/web/src/components/table-pro/components/columns-setting/style.less
@@ -70,7 +70,7 @@
                     padding-top: @margin-xxs;
 
                     .@{mui-prefix}SvgIcon-root {
-                        color: var(--gray-5);
+                        color: var(--gray-color-5);
                     }
                 }
 
