--- a/apps/web/src/components/multi-tag/style.less
+++ b/apps/web/src/components/multi-tag/style.less
@@ -26,7 +26,7 @@
     &-more {
         min-width: unset!important;
         padding: 0 6px!important;
-        background-color: var(--gray-1)!important;
+        background-color: var(--gray-color-1)!important;
         border-radius: @border-radius-xs!important;
     }
     
@@ -41,8 +41,8 @@
                 max-height: 250px;
                 padding: @padding-md;
                 overflow: hidden auto;
-                background-color: var(--gray-2);
-                border-color: var(--gray-2);
+                background-color: var(--gray-color-2);
+                border-color: var(--gray-color-2);
                 border-radius: @border-radius-base;
             }
         }
