feat: entity list manage tags data interact phase 1

--- a/apps/web/src/components/manage-tags-modal/style.module.less
+++ b/apps/web/src/components/manage-tags-modal/style.module.less
@@ -17,3 +17,11 @@
         }
     }
 }
+
+.select-empty {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: @padding-lg @padding-md;
+    color: var(--text-color-secondary);
+}
