--- a/apps/web/src/components/manage-tags-modal/style.module.less
+++ b/apps/web/src/components/manage-tags-modal/style.module.less
@@ -16,6 +16,12 @@
             color: var(--text-color-tertiary);
         }
     }
+
+    .entity-tags-wrapper {
+        display: flex;
+        flex-wrap: wrap;
+        gap: 8px;
+    }
 }
 
 .select-empty {
