fix: adjust the style of the tag component to unify the height

--- a/apps/web/src/components/multi-tag/style.less
+++ b/apps/web/src/components/multi-tag/style.less
@@ -7,9 +7,12 @@
 
     > .@{mui-prefix}Stack-root {
         .@{mui-prefix}Stack-root {
+            display: flex;
+            flex-direction: row;
+            gap: 8px;
             align-items: center;
             justify-content: start;
-            height: 100%
+            height: 100%;
         }
         .@{mui-prefix}Stack-root:nth-child(2) {
             position: absolute;
