--- a/apps/web/src/components/multi-tag/style.less
+++ b/apps/web/src/components/multi-tag/style.less
@@ -28,7 +28,9 @@
     
     &-more {
         min-width: unset!important;
+        height: 24px;
         padding: 0 6px!important;
+        margin-top: 1px !important;
         background-color: var(--gray-color-1)!important;
         border-radius: @border-radius-xs!important;
     }
