fix: Fix the issue where deleting the body style affects the dataCard style

--- a/apps/web/src/plugin/plugins/data-card/view/style.less
+++ b/apps/web/src/plugin/plugins/data-card/view/style.less
@@ -27,6 +27,7 @@
         height: 100%;
         padding: @padding-md;
         overflow: hidden;
+        line-height: 1.5;
 
         &__icon {
             padding: @padding-sm;
@@ -60,7 +61,6 @@
             max-width: calc(100% - 28px);
             font-size: var(--title-font-size);
             font-weight: @font-weight-regular;
-            // .text-size(@font-size-base);
             color: var(--text-color-secondary);
         }
 
