fix: Increase the font weight when customizing the table header

--- a/apps/web/src/components/table-pro/style.less
+++ b/apps/web/src/components/table-pro/style.less
@@ -35,10 +35,17 @@
         &-header {
             display: flex;
             align-items: center;
+            width: 100%;
+
+            > .@{prefix}-tooltip {
+                max-width: calc(100% - 20px);
+            }
     
             &-label {
-                flex: 1;
-                margin-right: @margin-xxs;
+                overflow: hidden;
+                font-weight: @font-weight-medium;
+                text-overflow: ellipsis;
+                white-space: nowrap;
             }
     
             &-icon {
