fix: --bug=1180192 No banner prompt appeared when editing tag

--- a/apps/web/src/pages/device/components/change-group-modal/style.module.less
+++ b/apps/web/src/pages/device/components/change-group-modal/style.module.less
@@ -2,8 +2,7 @@
     position: relative;
     padding: @padding-xl @padding-xl 0 @padding-xl;
 
-    :global(.MuiPaper-root.MuiAlert-root) {
-        margin: 0 0 @margin-md;
-        box-shadow: none;
+    .items {
+        margin-top: @margin-md;
     }
 }
