--- a/apps/web/src/styles/mui-polyfill.less
+++ b/apps/web/src/styles/mui-polyfill.less
@@ -225,6 +225,10 @@ input.@{mui-prefix}InputBase-input {
 .@{mui-prefix}Paper-root {
     &.@{mui-prefix}Paper-elevation {
         box-shadow: @shadow-2;
+
+        &.@{mui-prefix}Alert-root {
+            box-shadow: none;
+        }
     }
 
     .@{mui-prefix}List-root {
