feat: Error handle on response error data as blob resolved

--- a/apps/web/src/pages/device/components/batch-add-modal/components/batch-add-progress/style.module.less
+++ b/apps/web/src/pages/device/components/batch-add-modal/components/batch-add-progress/style.module.less
@@ -18,10 +18,13 @@
 
     .result {
         display: flex;
-        align-items: center;
 
         &:not(:first-child) {
             margin-top: @margin-xs;
+        }
+
+        svg {
+            margin-top: 1px;
         }
 
         .text {
