--- a/apps/web/src/pages/device/style.less
+++ b/apps/web/src/pages/device/style.less
@@ -1,10 +1,16 @@
 .@{prefix}-view-device {
     position: relative;
     padding: @padding-lg;
+    overflow: auto;
 
     .@{prefix}-view__inner {
         display: flex;
         flex-direction: row;
+        min-width: 1000px;
+
+        &.shrink {
+            min-width: 750px;
+        }
 
         .device-right {
             position: relative;
