--- a/apps/web/src/pages/integration/style.less
+++ b/apps/web/src/pages/integration/style.less
@@ -5,7 +5,7 @@
     padding: @padding-lg;
     overflow: auto;
 
-    > .@{mui-prefix}CircularProgress-root {
+    > .@{prefix}-int-card__loading {
         position: absolute;
         top: 50%;
         left: 50%;
