fix: Optimize the ui style

--- a/apps/web/src/components/table-pro/components/columns-setting/style.less
+++ b/apps/web/src/components/table-pro/components/columns-setting/style.less
@@ -100,6 +100,7 @@
             .@{mui-prefix}SvgIcon-root {
                 width: 18px;
                 height: 18px;
+                color: var(--gray-color-8);
             }
 
             &:hover {
