--- a/apps/web/src/pages/entity/style.less
+++ b/apps/web/src/pages/entity/style.less
@@ -109,4 +109,10 @@
             }
         }
     }
+
+    &-edit-modal {
+        .form-contain {
+            margin-top: 0;
+        }
+    }
 }
