--- a/apps/web/src/pages/device/components/device-group/components/header/style.module.less
+++ b/apps/web/src/pages/device/components/device-group/components/header/style.module.less
@@ -3,7 +3,6 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding-top: @padding-xxs;
     margin: 0 @margin-lg @margin-lg 0;
 
     .left {
@@ -44,7 +43,7 @@
 
     .search {
         position: absolute;
-        top: 0;
+        top: -4px;
         right: 25px;
     }
 }
