--- a/packages/shared/src/styles/themes/dark/colors.less
+++ b/packages/shared/src/styles/themes/dark/colors.less
@@ -1,81 +1,81 @@
-:root[data-theme="dark"] {
+:root[data-theme='dark'] {
     // Blue
     --blue-base: #5eafff;
     --blue-1: #052461;
     --blue-2: #083787;
-    --blue-3: #1351AD;
-    --blue-4: #226FD4;
-    --blue-5: #3491FA;
+    --blue-3: #1351ad;
+    --blue-4: #226fd4;
+    --blue-5: #3491fa;
     --blue-6: var(--blue-base);
-    --blue-7: #87C7FF;
-    --blue-8: #B0DDFF;
-    --blue-9: #D9F0FF;
-    --blue-10: #F0F9FF;
+    --blue-7: #87c7ff;
+    --blue-8: #b0ddff;
+    --blue-9: #d9f0ff;
+    --blue-10: #f0f9ff;
 
     // Dark Blue
     --geekblue-base: #3380cc;
-    --geekblue-1: #000D26;
-    --geekblue-2: #001C4D;
-    --geekblue-3: #002E73;
+    --geekblue-1: #000d26;
+    --geekblue-2: #001c4d;
+    --geekblue-3: #002e73;
     --geekblue-4: #064699;
-    --geekblue-5: #1261BE;
+    --geekblue-5: #1261be;
     --geekblue-6: var(--geekblue-base);
-    --geekblue-7: #599DD9;
-    --geekblue-8: #83BBE6;
-    --geekblue-9: #B1D8F2;
-    --geekblue-10: #E6F6FF;
+    --geekblue-7: #599dd9;
+    --geekblue-8: #83bbe6;
+    --geekblue-9: #b1d8f2;
+    --geekblue-10: #e6f6ff;
 
     // Green
-    --green-base: #40C776;
+    --green-base: #40c776;
     --green-1: #002113;
     --green-2: #014726;
-    --green-3: #076E3A;
-    --green-4: #10944E;
-    --green-5: #1EBA62;
+    --green-3: #076e3a;
+    --green-4: #10944e;
+    --green-5: #1eba62;
     --green-6: var(--green-base);
-    --green-7: #66D48E;
-    --green-8: #90E0AB;
-    --green-9: #BEEDCC;
-    --green-10: #EBFAEF;
+    --green-7: #66d48e;
+    --green-8: #90e0ab;
+    --green-9: #beedcc;
+    --green-10: #ebfaef;
 
     // Yellow
     --yellow-base: #ffd147;
-    --yellow-1: #5E3700;
+    --yellow-1: #5e3700;
     --yellow-2: #855200;
-    --yellow-3: #AB7003;
-    --yellow-4: #D1940F;
-    --yellow-5: #F7BA1E;
+    --yellow-3: #ab7003;
+    --yellow-4: #d1940f;
+    --yellow-5: #f7ba1e;
     --yellow-6: var(--yellow-base);
-    --yellow-7: #FFE070;
-    --yellow-8: #FFEC99;
-    --yellow-9: #FFF6C2;
-    --yellow-10: #FFFDEB;
+    --yellow-7: #ffe070;
+    --yellow-8: #ffec99;
+    --yellow-9: #fff6c2;
+    --yellow-10: #fffdeb;
 
     // Orange
-    --orange-base: #FF975E;
-    --orange-1: #5E1505;
+    --orange-base: #ff975e;
+    --orange-1: #5e1505;
     --orange-2: #852308;
-    --orange-3: #AB3913;
-    --orange-4: #D15321;
-    --orange-5: #F77234;
+    --orange-3: #ab3913;
+    --orange-4: #d15321;
+    --orange-5: #f77234;
     --orange-6: var(--orange-base);
-    --orange-7: #FFB587;
-    --orange-8: #FFD1B0;
-    --orange-9: #FFEAD9;
-    --orange-10: #FFF7F0;
+    --orange-7: #ffb587;
+    --orange-8: #ffd1b0;
+    --orange-9: #ffead9;
+    --orange-10: #fff7f0;
 
     // Red
-    --red-base: #FF6661;
+    --red-base: #ff6661;
     --red-1: #590511;
     --red-2: #800915;
-    --red-3: #A6141E;
-    --red-4: #CC2328;
-    --red-5: #F13535;
+    --red-3: #a6141e;
+    --red-4: #cc2328;
+    --red-5: #f13535;
     --red-6: var(--red-base);
-    --red-7: #FF928A;
-    --red-8: #FFBAB3;
-    --red-9: #FFE0DB;
-    --red-10: #FFF2F0;
+    --red-7: #ff928a;
+    --red-8: #ffbab3;
+    --red-9: #ffe0db;
+    --red-10: #fff2f0;
 
     // Gray
     --gray-base: #f2f3f5;
@@ -91,29 +91,29 @@
     --gray-10: #f7f8fa;
 
     // Cyan
-    --cyan-base: #3CE7FA;
-    --cyan-1: #003E54;
-    --cyan-2: #005E7A;
-    --cyan-3: #0081A1;
-    --cyan-4: #06A7C7;
-    --cyan-5: #12D1EE;
+    --cyan-base: #3ce7fa;
+    --cyan-1: #003e54;
+    --cyan-2: #005e7a;
+    --cyan-3: #0081a1;
+    --cyan-4: #06a7c7;
+    --cyan-5: #12d1ee;
     --cyan-6: var(--cyan-base);
-    --cyan-7: #66F5FF;
-    --cyan-8: #8FFBFF;
-    --cyan-9: #B8FFFF;
-    --cyan-10: #E6FFFE;
+    --cyan-7: #66f5ff;
+    --cyan-8: #8ffbff;
+    --cyan-9: #b8ffff;
+    --cyan-10: #e6fffe;
 
     // Purple
-    --purple-1: #F5F2FF;
-    --purple-2: #EAE3FD;
-    --purple-3: #DDD2FC;
-    --purple-4: #CBBBFA;
-    --purple-5: #B49CFA;
-    --purple-6: #A385F8;
-    --purple-7: #8E66FF;
-    --purple-8: #7B4EFA;
-    --purple-9: #633FC8;
-    --purple-10: #462C8E;
+    --purple-1: #f5f2ff;
+    --purple-2: #eae3fd;
+    --purple-3: #ddd2fc;
+    --purple-4: #cbbbfa;
+    --purple-5: #b49cfa;
+    --purple-6: #a385f8;
+    --purple-7: #8e66ff;
+    --purple-8: #7b4efa;
+    --purple-9: #633fc8;
+    --purple-10: #462c8e;
     --purple-base: var(--purple-6);
 
     // Gray Transparent
@@ -129,7 +129,8 @@
     --gray-transparent-10: rgba(247, 248, 250, 0.95);
 
     // Gray Background
-    --gray-background-1: #0C0C0C;
-    --gray-background-2: #1C1C1C;
-    --gray-background-3: #2C2C2C;
+    --gray-background-1: #0c0c0c;
+    --gray-background-2: #1c1c1c;
+    --gray-background-3: #2c2c2c;
+    --icon-hover-background: rgba(0, 0, 0, 0.04);
 }
