--- a/packages/shared/src/styles/themes/light/colors.less
+++ b/packages/shared/src/styles/themes/light/colors.less
@@ -1,119 +1,119 @@
 :root {
     // Blue
-    --blue-base: #3491FA;
-    --blue-1: #F0F9FF;
-    --blue-2: #D9F0FF;
-    --blue-3: #B0DDFF;
-    --blue-4: #87C7FF;
-    --blue-5: #5EAFFF;
+    --blue-base: #3491fa;
+    --blue-1: #f0f9ff;
+    --blue-2: #d9f0ff;
+    --blue-3: #b0ddff;
+    --blue-4: #87c7ff;
+    --blue-5: #5eafff;
     --blue-6: var(--blue-base);
-    --blue-7: #226FD4;
-    --blue-8: #1351AD;
+    --blue-7: #226fd4;
+    --blue-8: #1351ad;
     --blue-9: #083787;
     --blue-10: #052461;
 
     // Dark Blue
-    --geekblue-base: #1261BE;
-    --geekblue-1: #E6F6FF;
-    --geekblue-2: #B1D8F2;
-    --geekblue-3: #83BBE6;
-    --geekblue-4: #599DD9;
-    --geekblue-5: #3380CC;
+    --geekblue-base: #1261be;
+    --geekblue-1: #e6f6ff;
+    --geekblue-2: #b1d8f2;
+    --geekblue-3: #83bbe6;
+    --geekblue-4: #599dd9;
+    --geekblue-5: #3380cc;
     --geekblue-6: var(--geekblue-base);
     --geekblue-7: #064699;
-    --geekblue-8: #002E73;
-    --geekblue-9: #001C4D;
-    --geekblue-10: #000D26;
+    --geekblue-8: #002e73;
+    --geekblue-9: #001c4d;
+    --geekblue-10: #000d26;
 
     // Green
-    --green-base: #1EBA62;
-    --green-1: #EBFAEF;
-    --green-2: #BEEDCC;
-    --green-3: #90E0AB;
-    --green-4: #66D48E;
-    --green-5: #40C776;
+    --green-base: #1eba62;
+    --green-1: #ebfaef;
+    --green-2: #beedcc;
+    --green-3: #90e0ab;
+    --green-4: #66d48e;
+    --green-5: #40c776;
     --green-6: var(--green-base);
-    --green-7: #10944E;
-    --green-8: #076E3A;
+    --green-7: #10944e;
+    --green-8: #076e3a;
     --green-9: #014726;
     --green-10: #002113;
 
     // Yellow
-    --yellow-base: #F7BA1E;
-    --yellow-1: #FFFDEB;
-    --yellow-2: #FFF6C2;
-    --yellow-3: #FFEC99;
-    --yellow-4: #FFE070;
-    --yellow-5: #FFD147;
+    --yellow-base: #f7ba1e;
+    --yellow-1: #fffdeb;
+    --yellow-2: #fff6c2;
+    --yellow-3: #ffec99;
+    --yellow-4: #ffe070;
+    --yellow-5: #ffd147;
     --yellow-6: var(--yellow-base);
-    --yellow-7: #D1940F;
-    --yellow-8: #AB7003;
+    --yellow-7: #d1940f;
+    --yellow-8: #ab7003;
     --yellow-9: #855200;
-    --yellow-10: #5E3700;
+    --yellow-10: #5e3700;
 
     // Orange
-    --orange-base: #F77234;
-    --orange-1: #FFF7F0;
-    --orange-2: #FFEAD9;
-    --orange-3: #FFD1B0;
-    --orange-4: #FFB587;
-    --orange-5: #FF975E;
+    --orange-base: #f77234;
+    --orange-1: #fff7f0;
+    --orange-2: #ffead9;
+    --orange-3: #ffd1b0;
+    --orange-4: #ffb587;
+    --orange-5: #ff975e;
     --orange-6: var(--orange-base);
-    --orange-7: #D15321;
-    --orange-8: #AB3913;
+    --orange-7: #d15321;
+    --orange-8: #ab3913;
     --orange-9: #832308;
-    --orange-10: #5E1505;
+    --orange-10: #5e1505;
 
     // Red
-    --red-base: #F13535;
-    --red-1: #FFF2F0;
-    --red-2: #FFE0DB;
-    --red-3: #FFBAB3;
-    --red-4: #FF928A;
-    --red-5: #FF6661;
+    --red-base: #f13535;
+    --red-1: #fff2f0;
+    --red-2: #ffe0db;
+    --red-3: #ffbab3;
+    --red-4: #ff928a;
+    --red-5: #ff6661;
     --red-6: var(--red-base);
-    --red-7: #CC2328;
-    --red-8: #A6141E;
+    --red-7: #cc2328;
+    --red-8: #a6141e;
     --red-9: #800915;
     --red-10: #590511;
 
     // Gray
-    --gray-base: #272E3B;
-    --gray-1: #F7F8FA;
-    --gray-2: #F2F3F5;
-    --gray-3: #E5E6EB;
-    --gray-4: #C9CDD4;
-    --gray-5: #A9AEB8;
-    --gray-6: #86909C;
-    --gray-7: #6B7785;
-    --gray-8: #4E5969;
+    --gray-base: #272e3b;
+    --gray-1: #f7f8fa;
+    --gray-2: #f2f3f5;
+    --gray-3: #e5e6eb;
+    --gray-4: #c9cdd4;
+    --gray-5: #a9aeb8;
+    --gray-6: #86909c;
+    --gray-7: #6b7785;
+    --gray-8: #4e5969;
     --gray-9: var(--gray-base);
-    --gray-10: #1D2129;
+    --gray-10: #1d2129;
 
     // Cyan
-    --cyan-base: #12D1EE;
-    --cyan-1: #E6FFFE;
-    --cyan-2: #B8FFFF;
-    --cyan-3: #8FFBFF;
-    --cyan-4: #66F5FF;
-    --cyan-5: #3CE7FA;
+    --cyan-base: #12d1ee;
+    --cyan-1: #e6fffe;
+    --cyan-2: #b8ffff;
+    --cyan-3: #8ffbff;
+    --cyan-4: #66f5ff;
+    --cyan-5: #3ce7fa;
     --cyan-6: var(--cyan-base);
-    --cyan-7: #06A7C7;
-    --cyan-8: #0081A1;
-    --cyan-9: #005E7A;
-    --cyan-10: #003E54;
+    --cyan-7: #06a7c7;
+    --cyan-8: #0081a1;
+    --cyan-9: #005e7a;
+    --cyan-10: #003e54;
 
     // Purple
-    --purple-1: #F5F2FF;
-    --purple-2: #EAE3FD;
-    --purple-3: #DDD2FC;
-    --purple-4: #CBBBFA;
-    --purple-5: #B49CFA;
-    --purple-6: #A385F8;
-    --purple-7: #8E66FF;
-    --purple-8: #7B4EFA;
-    --purple-9: #633FC8;
-    --purple-10: #462C8E;
+    --purple-1: #f5f2ff;
+    --purple-2: #eae3fd;
+    --purple-3: #ddd2fc;
+    --purple-4: #cbbbfa;
+    --purple-5: #b49cfa;
+    --purple-6: #a385f8;
+    --purple-7: #8e66ff;
+    --purple-8: #7b4efa;
+    --purple-9: #633fc8;
+    --purple-10: #462c8e;
     --purple-base: var(--purple-7);
 
     // Gray Transparent
@@ -129,7 +129,8 @@
     --gray-transparent-10: rgba(29, 33, 41, 0.95);
 
     // Gray Background
-    --gray-background-1: #0C0C0C;
-    --gray-background-2: #1C1C1C;
-    --gray-background-3: #2C2C2C;
+    --gray-background-1: #0c0c0c;
+    --gray-background-2: #1c1c1c;
+    --gray-background-3: #2c2c2c;
+    --icon-hover-background: rgba(0, 0, 0, 0.04);
 }
