--- a/apps/web/src/pages/dashboard/style.less
+++ b/apps/web/src/pages/dashboard/style.less
@@ -125,6 +125,7 @@
         &-main {
             position: relative;
             width: 100%;
+            height: 100%;
 
             & > div {
                 height: 100%;
