--- a/apps/web/src/components/table-pro/components/columns-setting/style.less
+++ b/apps/web/src/components/table-pro/components/columns-setting/style.less
@@ -106,6 +106,10 @@
             &:hover {
                 color: var(--primary-color-7)!important;
                 border: 1px solid var(--primary-color-7)!important;
+
+                .@{mui-prefix}SvgIcon-root {
+                    color: var(--primary-color-7);
+                }
             }
         }
     }
