--- a/apps/web/src/components/toggle-radio/style.less
+++ b/apps/web/src/components/toggle-radio/style.less
@@ -5,7 +5,7 @@
 
         &__active {
             font-weight: @font-weight-medium!important;
-            box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.02), 0 2px 6px 6px rgba(0, 0, 0, 0.02), 0 2px 6px 0 rgba(0, 0, 0, 0.02);
+            box-shadow: 0 0 2px 0 rgba(0, 0, 0, 0.2);
         }
     }
 }
