--- a/apps/web/src/pages/integration/views/integration-detail/components/ns-content/style.less
+++ b/apps/web/src/pages/integration/views/integration-detail/components/ns-content/style.less
@@ -2,7 +2,7 @@
     display: flex;
     flex: 1;
     flex-direction: column;
-    padding: 0;
+    height: 0;
 
     .@{mui-prefix}Tabs-flexContainer {
         height: 100%;
